--- a/package.json
+++ b/package.json
@@ -11,10 +11,7 @@
     "socket.io-file": "^2.0.31",
     "uuid": "^9.0.1"
   },
-  "devDependencies": {
-    "nodemon": "^3.0.3"
-  },
   "scripts": {
-    "start": "nodemon src/app.js"
+    "start": "node index.js"
   }
 }
