--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,8 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.3",
     "@reduxjs/toolkit": "^2.2.2",
     "@tanstack/react-query": "^5.28.6",
     "@testing-library/jest-dom": "^5.17.0",
@@ -17,12 +19,14 @@
     "antd": "^5.15.3",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.2",
+    "clsx": "^2.1.0",
     "firebase": "^10.9.0",
     "he": "^1.2.0",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-avatar": "^5.0.3",
+    "react-avatar-editor": "^13.0.2",
     "react-bootstrap": "^2.10.0",
     "react-datepicker": "^6.5.0",
     "react-dom": "^18.2.0",
