--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.2",
     "clsx": "^2.1.0",
+    "emoji-picker-react": "^4.9.2",
     "firebase": "^10.9.0",
     "he": "^1.2.0",
     "js-cookie": "^3.0.5",
@@ -39,6 +40,7 @@
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
     "sass": "^1.72.0",
+    "simple-peer": "^9.11.1",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.7.5",
     "uuid": "^9.0.1",
@@ -69,6 +71,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
     "@tanstack/eslint-plugin-query": "^5.28.6",
     "tailwindcss": "^3.4.1"
   }
