--- a/client/package.json
+++ b/client/package.json
@@ -44,6 +44,7 @@
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.7.5",
     "uuid": "^9.0.1",
+    "wavesurfer.js": "^7.7.10",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
