--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@zegocloud/zego-uikit-prebuilt": "^2.0.1",
     "antd": "^5.15.3",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.2",
@@ -29,22 +30,22 @@
     "react-avatar": "^5.0.3",
     "react-avatar-editor": "^13.0.2",
     "react-bootstrap": "^2.10.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-datepicker": "^6.5.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.51.1",
     "react-icons": "^5.0.1",
     "react-input-emoji": "^5.6.5",
+    "react-player": "^2.16.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
     "sass": "^1.72.0",
-    "simple-peer": "^9.11.1",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.7.5",
     "uuid": "^9.0.1",
-    "wavesurfer.js": "^7.7.10",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
