--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "he": "^1.2.0",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-avatar": "^5.0.3",
     "react-avatar-editor": "^13.0.2",
