--- a/chatService/package.json
+++ b/chatService/package.json
@@ -12,12 +12,13 @@
     "install": "^0.13.0",
     "kafkajs": "^2.2.4",
     "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.0",
     "puppeteer": "^22.6.1",
     "socket.io": "^4.7.4",
     "socket.io-file": "^2.0.31",
     "uuid": "^9.0.1"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon index.js"
   }
 }
