--- a/notificationService/package.json
+++ b/notificationService/package.json
@@ -16,7 +16,7 @@
     "nodemon": "^3.0.3"
   },
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
     "prod": "node index.js"
   }
 }
