--- a/client/package.json
+++ b/client/package.json
@@ -27,18 +27,17 @@
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
+    "react-audio-play": "^0.0.19",
     "react-avatar": "^5.0.3",
     "react-avatar-editor": "^13.0.2",
     "react-bootstrap": "^2.10.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-datepicker": "^6.5.0",
-    "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.51.1",
     "react-icons": "^5.0.1",
     "react-input-emoji": "^5.6.5",
-    "react-player": "^2.16.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
