--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "emoji-picker-react": "^4.9.2",
     "firebase": "^10.9.0",
     "he": "^1.2.0",
+    "howler": "^2.2.4",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
